--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/api.js"></script>
+    <script src="js/api_results.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
