--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,16 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/api_results.js"></script>
+    <script src="js/donut.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
     <div id="dropzone"></div>
     <input type="file" id="files" name="files[]" multiple />
+    <canvas id="donut" height="100%"></canvas>
 </body>
 </html>
