--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,36 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     <script src="js/api.js"></script>
     <script src="js/api_results.js"></script>
     <script src="js/donut.js"></script>
     <script src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 </head>
 <body>
-    <div id="dropzone"></div>
-    <input type="file" id="files" name="files[]" multiple />
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">The Minnows: Snack to Sequence</a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <div class="starter-template">
+            <h1>Real Time Classification using BLAST</h1>
+            <div class="row">
+    <div class="col-md-2 col-md-offset-4"> <div id="dropzone"> <h5>Drop FASTA files here</h5></div>
+    <input type="file" id="files" name="files[]" multiple /></div>
+</div>
+    <img id="loading" src="loading10.gif" alt="Loading">
     <canvas id="donut" height="100%"></canvas>
+      </div>
+
+    </div>
 </body>
 </html>
